[package]
name = "datafusion-ext-plans"
version = "0.1.0"
edition = "2024"
resolver = "1"

[features]
default = ["tokio/rt-multi-thread"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
blaze-jni-bridge = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-exprs = { workspace = true }
datafusion-ext-functions = { workspace = true }
orc-rust = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
bitvec = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
count-write = { workspace = true }
derivative = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
lz4_flex = { workspace = true }
num = { workspace = true }
object_store = { workspace = true }
once_cell = { workspace = true }
panic-message = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
unchecked-index = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
