[package]
name = "datafusion-ext"
version = "0.1.0"
edition = "2021"
resolver = "1"

[features]
default = ["arrow/ffi", "datafusion/simd", "tokio/rt-multi-thread"]

[dependencies]
arrow = { version = "22.0.0", features = ["ffi"] }
async-trait = "0.1.56"
bigdecimal = "0.3.0"
bytes = "1.1.0"
datafusion = "12.0.0"
futures = "0.3"
itertools = "0.10.3"
jni = "0.19.0"
log = "0.4.14"
num = "0.4.0"
once_cell = "1.11.0"
paste = "1.0.7"
tempfile = "3"
tokio = "1.19"
zstd = "0.11.2"