[package]
name = "datafusion-ext"
version = "0.1.0"
edition = "2021"
resolver = "1"

[features]
default = ["arrow/ffi", "datafusion/simd", "tokio/rt-multi-thread"]

[dependencies]
arrow = "24.0.0"
async-trait = "0.1.56"
base64 = "0.13.0"
bytes = "1.2.0"
chrono = "0.4.19"
dashmap = "5.3.4"
datafusion = { version = "10.0.0", features = ["simd"] }
futures = "0.3"
itertools = "0.10.3"
jni = "0.19.0"
log = "0.4.14"
num = "0.4.0"
object_store = "0.3.0"
once_cell = "1.13.0"
paste = "1.0.7"
tempfile = "3"
tokio = { version = "^1.20", features = ["rt-multi-thread"] }
zstd = "0.11.2"
