[package]
name = "plan-serde"
version = "0.1.0"
edition = "2021"

[features]
default = ["datafusion/simd", "prost/no-recursion-limit"]
[dependencies]
datafusion = "12.0.0"
log = "0.4.14"
prost = "0.11.0"

[dependencies.datafusion-ext]
path = "../datafusion-ext"

[build-dependencies]
tonic-build = { version = "0.8.2" }
